# graduate_work

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  docker-compose.yml
auth_service/: docker-entrypoint.sh
elastic/: Dockerfile
payment-admin/: Dockerfile  Makefile  pyproject.toml  requirements.txt
payment-admin/app/: docker-entrypoint.sh
payment-admin/app/billing/: admin.py  backends.py
payment-admin/app/billing/locale/en/LC_MESSAGES/: django.po
payment-admin/app/billing/locale/ru/LC_MESSAGES/: django.po
payment-admin/app/billing/migrations/: 0001_initial.py
payment-admin/app/billing/models/: __init__.py  payments.py  subscriptions.py  user.py
payment-admin/app/config/: settings.py  urls.py
payment-admin/app/config/components/: apps.py  auth.py  database.py  internationalization.py  middlewares.py
payment-admin/app/uwsgi/: uwsgi.ini  uwsgi_dev.ini
payment-api/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
payment-api/src/: cli.py  main_grpc.py  main_http.py
payment-api/src/api/: healthcheck.py
payment-api/src/api/v1/: event.py  payments.py  refunds.py  wallets.py
payment-api/src/cache/: cache_client.py  redis.py
payment-api/src/core/: settings.py  tracing.py
payment-api/src/core/grpc/: subscription_pb2.py  subscription_pb2.pyi  subscription_pb2_grpc.py
payment-api/src/core/grpc/models/: payment_pb2.py  payment_pb2.pyi  subscription_pb2.py  subscription_pb2.pyi
payment-api/src/core/grpc/services/: payment_pb2_grpc.py  subscription_pb2_grpc.py
payment-api/src/database/: models.py  postgres.py
payment-api/src/dependencies/: registrator.py
payment-api/src/dependencies/services/: __init__.py  event_handler_factory.py  payment_factory.py  refund_factory.py  subscription_manager_factory.py  wallet_factory.py
payment-api/src/enums/: payment.py
payment-api/src/exceptions/: base.py  external.py  payment.py  refund.py  wallet.py
payment-api/src/middlewares/: main.py
payment-api/src/migrations/: env.py
payment-api/src/migrations/versions/: 19e48d907c89_add_currency_columns.py  2a06df1125d5_add_external_payment_support.py  5abe3dda0a8c_add_preffered_field_for_wallet.py  956d3bcee29f_initial.py  bd3078f0968c_fix_enum.py  e685e515c0be_fix_inconsistenses.py
payment-api/src/models/domain/: base.py  payment.py  refund.py  wallet.py
payment-api/src/models/events/: base.py  payment.py  refund.py
payment-api/src/producers/: kafka.py  producer.py
payment-api/src/proto/: subscription.proto
payment-api/src/protos/: payment.proto  subscription.proto
payment-api/src/repositories/: base.py  payment.py  refunds.py  wallet.py
payment-api/src/schemas/v1/: payments.py
payment-api/src/schemas/v1/billing/: events.py  payments.py  refunds.py  subscription.py
payment-api/src/schemas/v1/crud/: enums.py  payments.py  refunds.py  wallets.py
payment-api/src/services/: bearer.py  event_handler.py  payment.py  payment_gateway.py  refund.py  subscription.py  uow.py  wallet.py
payment-api/src/services/billing/: event_processor.py  payment_gateway.py
payment-api/src/services/grpc/: payment.py
payment-api/tests/: test_event_handler.py  test_payment_service.py  test_refund_service.py
payment-api/tests/testdata/: events.py  payment.py  refund.py
payment-worker/: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  pyproject.toml
payment-worker/src/: main.py
payment-worker/src/broker/: base.py  client.py  kafka_client.py  rabbit.py
payment-worker/src/core/: config.py  logging.py
payment-worker/src/database/: postgres.py
payment-worker/src/handlers/: event_handler.py
payment-worker/src/models/: payment.py  refund.py  user_subscription.py
payment-worker/src/schemas/: notify.py
payment-worker/src/schemas/events/: payment.py  refund.py
subscription-api/: alembic.ini  pyproject.toml  requirements.txt
subscription-api/src/: main_grpc.py  main_http.py
subscription-api/src/api/v1/: subscriptions.py  user_subscriptions.py
subscription-api/src/core/: settings.py  tracing.py
subscription-api/src/database/: models.py
subscription-api/src/dependencies/services/: __init__.py  subscription_service_factory.py  user_subscription_service_factory.py
subscription-api/src/exceptions/: base.py  subscription.py  user_subscription.py
subscription-api/src/migrations/: env.py
subscription-api/src/migrations/versions/: 4567aa5f5f14_add_created_field.py  a498ba244d20_created_field_nullable.py  e988677c84b3_initial.py
subscription-api/src/models/domain/: base.py  subscription.py  user_subscription.py
subscription-api/src/repositories/: base.py  subscriptions.py  user_subscriptions.py
subscription-api/src/schemas/v1/: subscription.py  user_subscription.py
subscription-api/src/services/: bearer.py  subscription.py  uow.py  user_subscription.py
subscription-api/src/services/grpc/: subscriptions.py
subscription-api/tests/: test_subscription_service.py  test_user_subscription.py
subscription-api/tests/testdata/: subscription.py
(+28 files in other folders)
